[gd_scene load_steps=9 format=3 uid="uid://drohybeoxrexw"]

[ext_resource type="Script" uid="uid://wrgi2u06gdin" path="res://scripts/environment/pressure_plate.gd" id="1_3w2wm"]
[ext_resource type="Material" uid="uid://cf2g5d07kmao" path="res://assets/materials/testing_color.tres" id="2_sc0nw"]

[sub_resource type="BoxMesh" id="BoxMesh_8vubt"]
size = Vector3(1, 0.01, 1)

[sub_resource type="BoxMesh" id="BoxMesh_xtofl"]
size = Vector3(0.95, 0.05, 0.95)

[sub_resource type="BoxShape3D" id="BoxShape3D_xtofl"]
size = Vector3(0.95, 0.05, 0.95)

[sub_resource type="Animation" id="Animation_gubfq"]
length = 0.001

[sub_resource type="Animation" id="Animation_r34r6"]
resource_name = "Step"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e2cdq"]
_data = {
&"RESET": SubResource("Animation_gubfq"),
&"Step": SubResource("Animation_r34r6")
}

[node name="pressure_plate" type="Node3D"]
script = ExtResource("1_3w2wm")

[node name="StaticBody3D" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
material_override = ExtResource("2_sc0nw")
mesh = SubResource("BoxMesh_8vubt")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_xtofl")

[node name="Area3D" type="Area3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02, 0)
collision_layer = 0
collision_mask = 6

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.72529e-09, 0)
shape = SubResource("BoxShape3D_xtofl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticBody3D"]
libraries = {
&"": SubResource("AnimationLibrary_e2cdq")
}

[connection signal="body_entered" from="StaticBody3D/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="StaticBody3D/Area3D" to="." method="_on_area_3d_body_exited"]
